# aps

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
cv_service/: CMakeLists.txt  config.json  converter.hpp  converter_manager.hpp  cv_service  main.cpp
cv_service/src/: pqueue.hpp
cv_service/src/data/: file.cpp
cv_service/src/http/: json.hpp  server.cpp  server.hpp  structs.cpp  structs.hpp
cv_service/src/request/: curl_handler.cpp  curl_handler.hpp
pq_service/: CMakeLists.txt  config.json  main.cpp  pq_service  pqueue_manager.hpp  test.cpp
pq_service/src/: pqueue.hpp
pq_service/src/data/: client.cpp  client.hpp  file.hpp  request.cpp
pq_service/src/http/: server.cpp  structs.cpp  structs.hpp
pq_service/src/request/: curl_handler.hpp
src/: pqueue.hpp
src/http/: server.cpp  server.hpp  structs.hpp
src/request/: client.hpp  request.cpp  request.hpp
videoportal/: package-lock.json  package.json
vportal/: README.md  package-lock.json  package.json
vportal/src/: App.vue
vportal/src/components/: client_card.vue  converter_card.vue
